--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -32,3 +32,7 @@ Runner/GeneratedPluginRegistrant.*
 !default.mode2v3
 !default.pbxuser
 !default.perspectivev3
+
+platform :ios, '10.0'
+use_frameworks!
+use_modular_headers!
