--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
+  firebase_messaging: ^15.1.5
+  firebase_storage: ^12.3.6
+  firebase_auth: ^5.3.3
+  firebase_analytics: ^11.3.5
+  firebase_remote_config: ^5.1.5
 
 dev_dependencies:
   flutter_test:
