--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,3 +43,7 @@ flutter {
     source = "../.."
 }
 apply plugin: 'com.google.gms.google-services'
+
+dependencies {
+    implementation 'com.google.firebase:firebase-analytics:21.0.0'
+}
