--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,18 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
-dependencies {
-    classpath 'com.google.gms:google-services:4.3.15' // 최신 버전 확인
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'com.google.gms:google-services:4.3.15'
+    }
 }
+
+dependencies {
+    classpath 'com.google.gms:google-services:4.3.15'
+}
+
